--- a/index.html
+++ b/index.html
@@ -120,13 +120,22 @@
             <h2 class="specialization-name">Чем мы занимаемся</h2>
         <ul class="specialization-art">
             <li class="specialization-list">
+                <div class="item-monoblock">
                 <img src="./images/img.jpg" alt="вводит код на клавиатуре" width="370" height="294">
+            <p class="monoblock-text">Десктопные приложения</p>    
+            </div>      
             </li>
+            <div class="item-monoblock">
             <li class="specialization-list">
                 <img src="./images/img1.jpg" alt="синхронизирует с телефоном" width="370" height="294"> 
-            </li>    
+            <p class="monoblock-text">Мобильные приложения</p>
+            </div>
+            </li>  
+            <div class="item-monoblock">
             <li class="specialization-list">
                 <img src="./images/img2.jpg" alt="стилизирует на планшете" width="370" height="294">
+            <p class="monoblock-text">Дизайнерские решения</p>
+            </div>
             </li>
         </ul>
         </div>
